--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
           <div class="location-not-found">
             <h1>Sorry, location not found!!!</h1>
-            <img src="./assets/assets/img/404.png" alt="404 Error">
+            <img src="./assets/img/404.png" alt="404 Error">
           </div>
 
 
           <div class="weather-body">
-            <img src="./assets/assets/img/cloud.png" alt="weather-img" class="weather-img">
+            <img src="./assets/img/cloud.png" alt="weather-img" class="weather-img">
             
             <div class="weather-box">
               <p class="temperature">0 <sup>°C</sup> </p>
